fix pre code overflow

--- a/stylesheets/main_ivory.css
+++ b/stylesheets/main_ivory.css
@@ -850,7 +850,8 @@ pre {
   background-clip: padding-box;
 }
 pre code {
-  overflow-wrap: break-word;
+  overflow: auto;
+  white-space: pre;
   padding: 1em;
   margin: 0.5em;
   border: none;
